--- a/learning_diary/_quarto.yml
+++ b/learning_diary/_quarto.yml
@@ -14,7 +14,7 @@ book:
     right:
       - icon: github
   repo-url: https://github.com/XianlaiYin/XianlaiYin.github.io
-  repo-actions: [edit, issue]
+  repo-actions: [issue]
   chapters:
     - index.qmd
     - WEEK1.qmd
