--- a/learning_diary/_quarto.yml
+++ b/learning_diary/_quarto.yml
@@ -19,6 +19,12 @@ book:
     - index.qmd
     - WEEK1.qmd
     - WEEK2.qmd
+    - WEEK3.qmd
+    - WEEK4.qmd
+    - WEEK5.qmd
+    - WEEK6.qmd
+    - WEEK7.qmd
+    - WEEK8.qmd
     - references.qmd
 
 bibliography: references.bib
